# hyprmodoro

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  hyprpm.toml  meson.build
src/: HyprmodoroPassElement.cpp  HyprmodoroPassElement.hpp  globals.hpp  helpers.cpp  hyprmodoroDecoration.cpp  hyprmodoroDecoration.hpp  main.cpp  pomodoro.cpp  pomodoro.hpp  renderer.cpp
